# vfflib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/vfflib/: fat.h  volume.h
lib/: fat.c  local_endian.h  volume.c
tool/: vfftool.c
